adjust link styling

--- a/fern/docs/pages/verbs/gather.mdx
+++ b/fern/docs/pages/verbs/gather.mdx
@@ -35,7 +35,7 @@ overridde it by specifying a [recognizer](/verbs/verbs/recognizer) property.
 <ParamField path="actionHook" type="string" required={true}>
   Webhook or websocket URL to send the collected digits or speech to; may be either an absolute or relative URL (see note below).  
   In the case of webhooks, this will be sent in a POST request.  
-  [See below](#actionhook-payload) for payload details.
+  [See below](#actionhook-properties) for payload details.
 </ParamField>
 
 <ParamField path="actionHookDelayAction" type="object" required={false}>
